tests/fail/validity/invalid_wide_raw.stderr
error: Undefined Behavior: constructing invalid value: encountered dangling vtable pointer in wide pointer
  --> $DIR/invalid_wide_raw.rs:LL:CC
   |
LL |     dbg!(S { x: unsafe { std::mem::transmute((0usize, 0usize)) } });
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ constructing invalid value: encountered dangling vtable pointer in wide pointer
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside `main` at $DIR/invalid_wide_raw.rs:LL:CC

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

